// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectStateContact should return the correct state 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "form": Object {
      "browser": false,
      "email": "",
      "emailPristine": false,
      "error": false,
      "message": "",
      "messagePristine": false,
      "name": "",
      "namePristine": false,
      "pending": false,
      "pristine": false,
      "subject": "",
      "subjectPristine": false,
      "success": false,
      "websitePristine": false,
    },
  },
}
`;

exports[`selectStateContact should return the initial state if no state is found 1`] = `
Object {
  "meta": Object {
    "isInitial": true,
  },
  "payload": Object {
    "form": Object {
      "email": "",
      "emailPristine": false,
      "error": false,
      "message": "",
      "messagePristine": false,
      "name": "",
      "namePristine": false,
      "pending": false,
      "pristine": false,
      "subject": "",
      "subjectPristine": false,
      "success": false,
    },
  },
}
`;

exports[`selectStateContact should return the initial state if resource key is not found 1`] = `
Object {
  "meta": Object {
    "isInitial": true,
  },
  "payload": Object {
    "form": Object {
      "email": "",
      "emailPristine": false,
      "error": false,
      "message": "",
      "messagePristine": false,
      "name": "",
      "namePristine": false,
      "pending": false,
      "pristine": false,
      "subject": "",
      "subjectPristine": false,
      "success": false,
    },
  },
}
`;

exports[`selectStateContactForm should return the correct state 1`] = `
Object {
  "browser": false,
  "email": "",
  "emailPristine": false,
  "error": false,
  "message": "",
  "messagePristine": false,
  "name": "",
  "namePristine": false,
  "pending": false,
  "pristine": false,
  "subject": "",
  "subjectPristine": false,
  "success": false,
  "websitePristine": false,
}
`;

exports[`selectStateContactForm should return the default if state isn't found 1`] = `
Object {
  "email": "",
  "emailPristine": false,
  "error": false,
  "message": "",
  "messagePristine": false,
  "name": "",
  "namePristine": false,
  "pending": false,
  "pristine": false,
  "subject": "",
  "subjectPristine": false,
  "success": false,
}
`;
